--- a/config.cfg
+++ b/config.cfg
@@ -1,4 +1,12 @@
-[DEFAULT]
-gear_ratio = 9
-motor_degrees = 1.8
-microstep = 1
+[CONVERSION]
+gear_ratio = 1
+delay = 0.5
+mode = PRINT_ONLY
+
+[RESET]
+command1 = --reset-command-timeout
+command2 = --reset
+
+[ANGLE]
+command1 = --reset-command-timeout
+command2 = --position,NUM
