added bool to enable logging added logging location config

--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,10 @@
-[CONVERSION]
+[SETTINGS]
 gear_ratio = 1
 delay = 0.5
 mode = PRINT_ONLY
+logging_enabled = yes
+;logging_location = ./Arta_tic.log
+
 
 [RESET]
 command1 = --reset-command-timeout
