add option for custom script

--- a/config.cfg
+++ b/config.cfg
@@ -4,7 +4,8 @@ delay = 0.5
 mode = PRINT_ONLY
 logging_enabled = yes
 ;logging_location = ./Arta_tic.log
-
+custom_script = yes
+custom_script_name = custom.py
 
 [RESET]
 command1 = --reset-command-timeout
