made readme better

--- a/config.cfg
+++ b/config.cfg
@@ -1,16 +1,18 @@
 [SETTINGS]
 gear_ratio = 1
 delay = 0.5
-mode = PRINT_ONLY
+mode = MOVE
 logging_enabled = yes
 ;logging_location = ./Arta_tic.log
-custom_script = yes
+custom_script = no
 custom_script_name = custom.py
 
 [RESET]
+command0 = --resume
 command1 = --reset-command-timeout
 command2 = --reset
 
 [ANGLE]
+command0 = --resume
 command1 = --reset-command-timeout
 command2 = --position,NUM
