--- a/config.cfg
+++ b/config.cfg
@@ -4,15 +4,14 @@ delay = 0.5
 mode = MOVE
 logging_enabled = yes
 ;logging_location = ./Arta_tic.log
-custom_script = no
-custom_script_name = custom.py
+custom_script = yes
+custom_script_name = bluetooth.py
 
 [RESET]
-command0 = --resume
-command1 = --reset-command-timeout
-command2 = --reset
+command0 = halt_and_set_position,0
+command1 = energize
+command2 = exit_safe_start
+
 
 [ANGLE]
-command0 = --resume
-command1 = --reset-command-timeout
-command2 = --position,NUM
+command0 = set_target_position,NUM
